@@ -1,5 +1,10 @@
 2003-11-30  Shaun McCance  <shaunm@gnome.org>
 
+	* src/yelp-window.c:
+	- Make no-sidebar the default, to avoid momentary flicker.
+
+2003-11-30  Shaun McCance  <shaunm@gnome.org>
+
 	* data/toc.xml.in:
 	- Some work on the TOC.
 
